--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "blog-system",
   "version": "1.0.0",
+  "engine": {
+    "node": "6.5.x",
+    "npm": "3.10.x"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node app.js"
